merubah nama file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p><b>Selamat berkunjung!</b><br>
     Ini adalah website pertama saya, saya membuatnya berdasarkan belajar di Lab dan saya membuat web ini
     dengan menggunakan bahasa pemrograman HTML.<br>
-    Nama saya : <a href="biodata.html">Muhammad Fachrul Al hafisz</a><br>
-    <a href="biodata.html">Klik untuk menuju biodata saya</a></p>
+    Nama saya : <a href="Biodata.html">Muhammad Fachrul Al hafisz</a><br>
+    <a href="Biodata.html">Klik untuk menuju biodata saya</a></p>
 </body>
 </html>
